Mon Dec 23 15:16:21 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/RTPortableServer/RT_Object_Adapter_Factory.cpp: Moved the
	  setting of the <collocation_resolver_name_> from the constructor 
	  to create (), since it is not required immediately on loading
	  the RT_PortableServer. This should fix a problem with GCC 2.95
	  builds on Solaris where the static initializations are all
	  messed up! Surprising that other tests even work.

Mon Dec 23 10:44:19 2002  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuetype/valuetype_ch.cpp:
	* TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:

	  Fixed code generation errors for components and eventtypes. Thanks
	  to Nanbor Wang <nanbor@cse.wustl.edu> for his example IDL files
	  that uncovered the problem.

Mon Dec 23 06:57:41 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/orbsvcs/Notify/ThreadPool_Task.h:
	* orbsvcs/orbsvcs/Notify/ThreadPool_Task.cpp: Fixed warnings in
	  SunCC builds. Yet another problem with SunCC compiler. This
	  should also hopefully fix a similar problem with Borland 6.

Sun Dec 22 22:46:50 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Connection_Handler.cpp: Replaced the word "error" from one
	  of the debug statements. The test
	  tests/RTCORBA/MT_Client_Protocol_Priority uses a script that
	  parses the output from the test run to determine if the test was
	  right. The script searches for the word "error" in the output
	  and on seeing it barf's. Hence the change.

Sun Dec 22 23:18:58 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Reply_Dispatcher.h:
	* tao/Reply_Dispatcher.i: Added an accessor for <timeout_>

	* tao/Muxed_TMS.cpp: Call start_dispatch () and end_dispatch ()
	  only if the Reply_Dispatcher has timout associated with it. This
	  should fix most of the problems that showed up in the latest
	  builds.
